css/style.css
h2, h3, h4 {
    scroll-margin-top: 20px;
}

.center {
    max-width: fit-content;
    margin-left: auto;
    margin-right: auto;
}

button, select {
    height: 20px;
    margin-bottom: 5px;
    border: none;
    border-radius: 5px;
    color: white;
}

.year-divider {
    width: 100%;
    height: 15px;
    margin-top: 5px;
    margin-bottom: 5px;
    background-color: gray;
}

.year {
    display: flex;
}

.year-text {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 5%;
    font-size: 150%;
    font-weight: bold;
    writing-mode: vertical-rl;
    transform: rotate(180deg);
}

.year-block {
    width: 90%;
}

.transfer {
    display: flex;
    flex-wrap: wrap;
    gap: 10px;
    width: 100%;
    height: 90%;
    margin-top: 5px;
    margin-bottom: 5px;
    margin-left: auto;
    margin-right: auto;
}

.semester {
    display: flex;
    flex-wrap: wrap;
    gap: 10px;
    width: 100%;
    min-height: 5px;
    margin-top: 5px;
    margin-bottom: 5px;
    margin-left: auto;
    margin-right: auto;
}

.class {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    width: 100px;
    height: 100px;
    border: 5px solid;
    border-radius: 5px;
    font-size: 85%;
    font-weight: bold;
    text-align: center;
    white-space: pre-wrap;
}

.class label {
    font-family: inherit;
    font-size: inherit;
    font-weight: inherit;
}

.class input {
    width: 80%;
    border: none;
    border-bottom: 1px solid black;
    font-family: inherit;
    font-size: inherit;
    font-weight: inherit;
    text-align: center;
}

.class select {
    width: 95%;
    height: auto;
    border: none;
    color: black;
    font-family: inherit;
    font-size: inherit;
    font-weight: inherit;
    text-align: center;
    white-space: normal;
}

.co-op {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 25px;
    border: 5px solid SkyBlue;
    border-radius: 5px;
    font-weight: bold;
}

.co-op select {
    width: auto;
    height: auto;
    padding-right: 5px;
    border: none;
    color: black;
    font-family: inherit;
    font-size: inherit;
    font-weight: inherit;
    text-align: center;
    white-space: normal;
}

#flowchartNotesTitle {
    margin-top: 10px;
    margin-bottom: 10px;
}

